// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="selected_unit "
        >
          <div
            aria-label="Achieved level L"
            class="level"
          >
            <h4>
              11 %
              <i
                class="fa fa-circle-o"
              />
            </h4>
          </div>
          <div
            class="summary"
          >
            300 av 2775
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders beregnet_andel 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="selected_unit "
        >
          <div
            aria-label="Achieved level L"
            class="level"
          >
            <h4>
              11 %
              <i
                class="fa fa-circle-o"
              />
            </h4>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
